tags and package description

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: ci
 
 on: [push]
 
@@ -20,7 +20,7 @@ jobs:
     - name: Install pip
       run: |
         python -m pip install --upgrade pip
-    - name: Install Django
+    - name: Install Django ${{ matrix.django-version }}
       env:
         DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
