--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,8 +1,9 @@
 name: pypi
 
 on:
-  release:
-    types: [created]
+  push:
+    tags:
+    - 'v*'
 
 jobs:
   deploy:
@@ -17,11 +18,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-    # TODO : assert tag matches version
-    - name: Build and publish
+    - name: Build
+      run: python setup.py sdist bdist_wheel
+    - name: Assert tag matches version
+      env:
+        GITHUB_TAG: ${{github.ref}}
+      run: python -c "import os, django_toosimple_q; assert 'v'+os.getenv('GITHUB_TAG') == django_toosimple_q.__version__"
+    - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
+      run: twine upload dist/*
