--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -21,28 +21,13 @@ jobs:
     - name: Set version
       env:
         GITHUB_TAG: ${{github.ref}}
-      run: |
-        python -c "
-        import os
-        assert os.getenv('GITHUB_TAG').startswith('refs/tags/v')
-        version = os.getenv('GITHUB_TAG').replace('refs/tags/v', '')
-        with open('django_toosimple_q/__init__.py', 'r') as f:
-            contents = f.read()
-        with open('django_toosimple_q/__init__.py', 'w') as f:
-            f.write(contents.replace('__version__ = \'dev\'', f'__version__ = \'{version}\''))
-        "
+      run: python scripts/ci_set_version_from_git.py
     - name: Build
       run: python setup.py sdist bdist_wheel
-    - name: Assert tag matches version
+    - name: Assert version
       env:
         GITHUB_TAG: ${{github.ref}}
-      run: |
-        python -c "
-        import os, django_toosimple_q;
-        print('tag : ' + os.getenv('GITHUB_TAG'));
-        print('module : ' + django_toosimple_q.__version__);
-        assert os.getenv('GITHUB_TAG') == 'refs/tags/v'+django_toosimple_q.__version__, 'Version mismatch'
-        "
+      run: python scripts/ci_assert_version_from_git.py
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
