--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
-        django-version: [2.2, 3.0b1]
+        python-version:
+        - 3.6
+        # - 3.7
+        # - 3.8
+        - 3.9
+        django-version:
+        - 2.2
+        - 3.1
+        - 3.2
 
     steps:
     - uses: actions/checkout@v1
