--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
         db-backend:
         - "sqlite"
         - "postgres"
+      fail-fast: false
 
     services:
       postgres:
@@ -54,13 +55,8 @@ jobs:
       run: |
         pip install -r requirements-dev.txt
         pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with pre-commit
+      uses: pre-commit/action@v2.0.2
     - name: Test
       env:
         TOOSIMPLEQ_TEST_DB: ${{ matrix.db-backend }}
