--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: ci
+name: test
 
 on: [push]
 
@@ -11,14 +11,12 @@ jobs:
     strategy:
       matrix:
         python-version:
-        - 3.6
-        # - 3.7
-        # - 3.8
-        - 3.9
+        - "3.8"
+        - "3.9"
+        - "3.10"
         django-version:
-        - 2.2
-        - 3.1
-        - 3.2
+        - "3.2"
+        - "4.0"
         db-backend:
         - "sqlite"
         - "postgres"
