--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-django>=2.0,<4
+django>=3.2.*,<=4.0.*
 
 # Additional requirements go here
-django-picklefield~=2.0
-croniter==1.0.15
+django-picklefield~=3.0.1
+croniter~=1.3.4
