--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,9 +50,7 @@ jobs:
       run: |
         python -m pip install Django~=$DJANGO_VERSION
     - name: Install dependencies
-      run: |
-        pip install -r requirements-dev.txt
-        pip install -r requirements.txt
+      run: pip install -r requirements-dev.txt
     - name: Lint with pre-commit
       uses: pre-commit/action@v2.0.2
     - name: Test
