CI: fix matrix ?

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,30 +9,24 @@ on:
 jobs:
   test:
 
-    name: Tests py${{ matrix.python-version }} / dj${{ matrix.django-version }} / ${{ matrix.db-backend }}
+    name: Tests py${{ matrix.py }} / dj${{ matrix.dj }} / ${{ matrix.db }}
 
     runs-on: ubuntu-latest
     strategy:
+      # all supported django version on lowest/highest supported python
       # see https://docs.djangoproject.com/en/4.1/faq/install/#what-python-version-can-i-use-with-django
       matrix:
-        python-version:
-        - "3.8"
-        - "3.9"
-        - "3.10"
-        django-version:
-        - "3.2"
-        - "4.0"
-        - "4.1"
-        db-backend:
+        db:
         - "sqlite"
         - "postgres"
         include:
-        - django-version: "3.2"
-          python-version: "3.6"
-        - django-version: "3.2"
-          python-version: "3.7"
-        - django-version: "4.1"
-          python-version: "3.11"
+        - {dj: "3.2", py: "3.6"}
+        - {dj: "3.2", py: "3.10"}
+        - {dj: "4.0", py: "3.8"}
+        - {dj: "4.0", py: "3.10"}
+        - {dj: "4.1", py: "3.8"}
+        - {dj: "4.1", py: "3.10"}
+        # - {dj: "4.1", py: "3.11"} # not yet available on github actions
       fail-fast: false
 
     services:
@@ -50,16 +44,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.py }}
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        py: ${{ matrix.py }}
     - name: Install pip
       run: |
         python -m pip install --upgrade pip
-    - name: Install Django ${{ matrix.django-version }}
+    - name: Install Django ${{ matrix.dj }}
       env:
-        DJANGO_VERSION: ${{ matrix.django-version }}
+        DJANGO_VERSION: ${{ matrix.dj }}
       run: |
         python -m pip install Django~=$DJANGO_VERSION
     - name: Install dependencies
@@ -68,6 +62,6 @@ jobs:
       uses: pre-commit/action@v2.0.2
     - name: Test
       env:
-        TOOSIMPLEQ_TEST_DB: ${{ matrix.db-backend }}
+        TOOSIMPLEQ_TEST_DB: ${{ matrix.db }}
       run: |
         python manage.py test
