--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
 
-    name: Tests py${{ matrix.py }} / dj${{ matrix.dj }} / ${{ matrix.db }}
+    name: Tests dj${{ matrix.dj }} / ${{ matrix.db }} / py${{ matrix.py }}
 
     runs-on: ubuntu-latest
     strategy:
@@ -17,20 +17,20 @@ jobs:
       # see https://docs.djangoproject.com/en/4.1/faq/install/#what-python-version-can-i-use-with-django
       matrix:
         include:
-        - {dj: "3.2", py: "3.6", db: "sqlite"}
-        - {dj: "3.2", py: "3.10", db: "sqlite"}
-        - {dj: "3.2", py: "3.6", db: "postgres"}
-        - {dj: "3.2", py: "3.10", db: "postgres"}
-        - {dj: "4.0", py: "3.8", db: "sqlite"}
-        - {dj: "4.0", py: "3.10", db: "sqlite"}
-        - {dj: "4.0", py: "3.8", db: "postgres"}
-        - {dj: "4.0", py: "3.10", db: "postgres"}
-        - {dj: "4.1", py: "3.8", db: "sqlite"}
-        - {dj: "4.1", py: "3.10", db: "sqlite"}
-        # - {dj: "4.1", py: "3.11", db: "sqlite"} # not yet available on github actions
-        - {dj: "4.1", py: "3.8", db: "postgres"}
-        - {dj: "4.1", py: "3.10", db: "postgres"}
-        # - {dj: "4.1", py: "3.11", db: "postgres"} # not yet available on github actions
+        - {dj: "3.2", db: "sqlite", py: "3.6"}
+        - {dj: "3.2", db: "sqlite", py: "3.10"}
+        - {dj: "3.2", db: "postgres", py: "3.6"}
+        - {dj: "3.2", db: "postgres", py: "3.10"}
+        - {dj: "4.0", db: "sqlite", py: "3.8"}
+        - {dj: "4.0", db: "sqlite", py: "3.10"}
+        - {dj: "4.0", db: "postgres", py: "3.8"}
+        - {dj: "4.0", db: "postgres", py: "3.10"}
+        - {dj: "4.1", db: "sqlite", py: "3.8"}
+        - {dj: "4.1", db: "sqlite", py: "3.10"}
+        # - {dj: "4.1", db: "sqlite", py: "3.11"} # not yet available on github actions
+        - {dj: "4.1", db: "postgres", py: "3.8"}
+        - {dj: "4.1", db: "postgres", py: "3.10"}
+        # - {dj: "4.1", db: "postgres", py: "3.11"} # not yet available on github actions
       fail-fast: false
 
     services:
