--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,4 +47,4 @@ jobs:
         run: docker compose build
 
       - name: Run tests
-        run: docker compose run django
+        run: docker compose run django test
