--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
 
   worker:
     <<: *default-django
-    command: worker --queue demo --reload never
+    command: worker --queue demo --reload never --verbosity 3
 
   postgres:
     image: postgres
