--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,19 +15,9 @@ jobs:
       with:
         python-version: '3.7'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Set version
-      env:
-        GITHUB_TAG: ${{github.ref}}
-      run: python scripts/ci_set_version_from_git.py
+      run: python -m pip install --upgrade pip twine build
     - name: Build
-      run: python setup.py sdist bdist_wheel
-    - name: Assert version
-      env:
-        GITHUB_TAG: ${{github.ref}}
-      run: python scripts/ci_assert_version_from_git.py
+      run: python -m build
     - name: Publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
