ci: try to fix windows workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,7 +60,7 @@ jobs:
         uses: ikalnytskyi/action-setup-postgres@v4
 
       - name: Update pip
-        run: pip install --upgrade pip
+        run: pip install --upgrade pip setuptools
 
       - name: Install python deps
         run: pip install -r requirements-dev.txt
