--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,10 +57,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Python version
-        uses: python --version
+        run: python --version
 
       - name: Packages versions
-        uses: pip freeze --all
+        run: pip freeze --all
 
       - name: Setup postgres
         uses: ikalnytskyi/action-setup-postgres@v4
